--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -99,4 +99,14 @@
   langid = {german},
 }
 
+@book{pieprzyk2010topics,
+  title={Topics in Cryptology - CT-RSA 2010: The 10th Cryptographers' Track at the RSA Conference 2010, San Francisco, CA, USA, March 1-5, 2010. Proceedings},
+  author={Pieprzyk, J.},
+  isbn={9783642119255},
+  series={Lecture Notes in Computer Science},
+  url={https://books.google.de/books?id=crqoCAAAQBAJ},
+  year={2010},
+  publisher={Springer Berlin Heidelberg}
+}
+
 
