--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -123,10 +123,14 @@
             \end{equation*}
             entschlüsseln.\footcite[68]{watjen2008}
         \end{quote}
-        \centering
-        \input{pkflow.tex}\\
-        \emph{Veranschaulichung des Public-Key-Verfahrens\footcite[67]{watjen2008}}\\
-        Um die Geheimhaltung zu gewährleisten muss das eingesetzte Verfahren so konzipiert sein, dass von dem öffentlichen Schlüssel $P$ keine Rückschlüsse auf den privaten Schlüssel $S$ gezogen werden können.\footcite[49]{beutelspacher2015}
+        \begin{center}
+            \input{pkflow.tex}\\
+            \emph{Veranschaulichung des Public-Key-Verfahrens\footcite[67]{watjen2008}}\\            
+        \end{center}
+        Um die Geheimhaltung zu gewährleisten muss das eingesetzte Verfahren so konzipiert sein, dass von dem öffentlichen Schlüssel $P$ keine Rückschlüsse auf den privaten Schlüssel $S$ gezogen werden können.\footcite[49]{beutelspacher2015} %FIXME Seitenumbruch %IDEA Authentikation schon hier?
+    
+    \subsection{Entwicklung des RSA-Algorithmus}
+        Das bis heute wichtigste Public-Key-Kryptosystem\footcite[Vgl.][26]{pieprzyk2010topics} \enquote{wurde 1978 von \emph{R. \textbf{R}ivest},\\ \emph{A. \textbf{S}hamir} und \emph{L. \textbf{A}dleman} erfunden, als sie zu zeigen versuchten, dass Public-Key-Kryptographie unmöglich sei.}\footcite[77]{beutelspacher2015} Dabei war \emph{Rivest} für die Entwicklung des Algorithmus und \emph{Shamir} für die Überprüfung auf Schwachstellen zuständig, während \emph{Adelman} auf beiden Seiten mitwirkte.\footcite[77]{ertel2003} Sie waren jedoch nicht die ersten, denn \enquote{Ende 1997 [wurde bekannt], dass \emph{Clifford Cocks} von den britischen Government Communications Headquarters (GCHQ) bereits 1975 dieselbe Idee hatte, sie aber strenger Geheimhaltung unterlag.}\footcite[71]{watjen2008}%FIXME Zeilenumbruch
 
     \newpage
     \printbibliography
