Literaturverzeichnis style & citestyle

--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -4,7 +4,7 @@
 
 \newcommand{\person}[1]{\textsc{#1}}
 
-\usepackage[style=reading]{biblatex}
+\usepackage[style=numeric, citestyle=reading]{biblatex}
 \bibliography{bib/Seminararbeit}
 
 \title{Seminararbeit}
