--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -13,6 +13,7 @@
 \begin{document}
 
     \pagenumbering{gobble}
+    \includepdf[pages=-]{./content/Deckblatt_Seminararbeit_2020.pdf}
     \maketitle
     \newpage
     \tableofcontents
@@ -124,7 +125,7 @@
             entschlüsseln.\footcite[68]{watjen2008}
         \end{quote}
         \begin{center}
-            \input{pkflow.tex}\\
+            \input{./content/pkflow.tex}\\
             \emph{Veranschaulichung des Public-Key-Verfahrens\footcite[67]{watjen2008}}\\            
         \end{center}
         Um die Geheimhaltung zu gewährleisten muss das eingesetzte Verfahren so konzipiert sein, dass von dem öffentlichen Schlüssel $P$ keine Rückschlüsse auf den privaten Schlüssel $S$ gezogen werden können.\footcite[49]{beutelspacher2015} %FIXME Seitenumbruch %IDEA Authentikation schon hier?
