--- a/inc/style.tex
+++ b/inc/style.tex
@@ -38,3 +38,6 @@
 % Grafikzeugs
 \usepackage{tikz}
 \usetikzlibrary{shapes.geometric, arrows, positioning, automata}
+
+% Einbinden von PDF-Dokumenten
+\usepackage{pdfpages}
