Eulersche Phi-Funktion

--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -13,7 +13,7 @@
   edition = {8., überarbeitete Auflage},
   publisher = {{Springer Spektrum}},
   location = {{Wiesbaden}},
-  isbn = {978-3-8348-1927-7 978-3-8348-2322-9},
+  isbn = {978-3-8348-1927-7},
   langid = {german},
 }
 
@@ -107,6 +107,23 @@
   url={https://books.google.de/books?id=crqoCAAAQBAJ},
   year={2010},
   publisher={Springer Berlin Heidelberg}
+}
+
+@book{swoboda2008kryptographie,
+  title = {Kryptographie Und {{IT}}-{{Sicherheit}}: {{Grundlagen}} Und Anwendungen},
+  author = {Swoboda, J. and Pramateftakis, M. and Spitz, S.},
+  date = {2008},
+  publisher = {{Vieweg+Teubner Verlag}},
+  url = {https://books.google.de/books?id=2oQkBAAAQBAJ},
+  isbn = {978-3-8348-9473-1},
+  series = {Studium : {{IT}}-{{Sicherheit}} Und Datenschutz}
+}
+
+@online{steinfeld,
+  title = {Eulersche {{Phi}}-{{Funktion}} - {{Mathepedia}}},
+  author = {Steinfeld, Thomas},
+  url = {https://mathepedia.de/Eulersche_Phi-Funktion.html},
+  urldate = {2020-11-03}
 }
 
 
