--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -100,7 +100,7 @@
         \end{align}
         %TODO Injektivität? Ertel 18
 
-        \section{RSA-Verschlüsselung}
+        \section{RSA-Verschlüsselung} %FIXME nicht als eigener Unterpunkt?
         \subsection[Public-Key-Kryptosysteme]{Das Public-Key-Verfahren}
         Die Grundlage der RSA-Verschlüsselung bildet die Idee der \emph{Public-Key-Kryptosysteme}.
 
@@ -134,7 +134,7 @@
         Das bis heute wichtigste Public-Key-Kryptosystem\footcite[Vgl.][26]{pieprzyk2010topics} \enquote{wurde 1978 von \emph{R. \textbf{R}ivest},\\ \emph{A. \textbf{S}hamir} und \emph{L. \textbf{A}dleman} erfunden, als sie zu zeigen versuchten, dass Public-Key-Kryptographie unmöglich sei.}\footcite[77]{beutelspacher2015} Dabei war \emph{Rivest} für die Entwicklung des Algorithmus und \emph{Shamir} für die Überprüfung auf Schwachstellen zuständig, während \emph{Adelman} auf beiden Seiten mitwirkte.\footcite[77]{ertel2003} Sie waren jedoch nicht die ersten, denn \enquote{Ende 1997 [wurde bekannt], dass \emph{Clifford Cocks} von den britischen Government Communications Headquarters (GCHQ) bereits 1975 dieselbe Idee hatte, sie aber strenger Geheimhaltung unterlag.}\footcite[71]{watjen2008}%FIXME Zeilenumbruch
     
     \subsection{Schlüsselerzeugung}
-        Um die bei einem \emph{asymmetrischen Verschlüsselungsverfahren} nötigen beiden Schlüssel zu erzeugen müssen zuerst zwei unterschiedliche Primzahlen $p$ und $q$ erzeugt werden.(Vgl. \cite[278]{dankmeier2006}) Aus diesen wird dann das Produkt $n=p\cdot q$, den \emph{Modul}, gebildet. Für die Funktionalität des Verfahrens spielt die größe der verwendeten Primzahlen keine Rolle, allerdings sinkt mit steigender Größe die Gefahr des \enquote{Aufbrechens} durch einen Unbefugten, da die Sicherheit der RSA-Verschlüsselung auf dem \emph{Faktorisierungsproblem} beruht. Dies ist \enquote{das bisher ungelöste Problem der schnellen Zerlegung großer Zahlen in ihre Primfaktoren, die Aufgabe hat eine exponentielle Komplexität.}\footcite[279]{dankmeier2006} Dadurch ist es bei den heute verwendten 100- bis 350-stelligen mit aktuellen Methoden und Rechenleistung nicht möglich aus $n$ die zugrundeliegenden Primzahlen $p$ und $q$ zu berechnen. %TODO möglichkeiten um große Primzahlen zu erstellen im nachfolgenden Kapitel
+        Um die bei einem \emph{asymmetrischen Verschlüsselungsverfahren} nötigen beiden Schlüssel zu erzeugen müssen zuerst zwei unterschiedliche Primzahlen $p$ und $q$ erzeugt werden.(Vgl. \cite[278]{dankmeier2006}) Aus diesen wird dann das Produkt $n=p\cdot q$, den \emph{Modul}, gebildet. Für die Funktionalität des Verfahrens spielt die größe der verwendeten Primzahlen keine Rolle, allerdings sinkt mit steigender Größe die Gefahr des \enquote{Aufbrechens} durch einen Unbefugten, da die Sicherheit der RSA-Verschlüsselung auf dem \emph{Faktorisierungsproblem} beruht. Dies ist \enquote{das bisher ungelöste Problem der schnellen Zerlegung großer Zahlen in ihre Primfaktoren, die Aufgabe hat eine exponentielle Komplexität.}\footcite[279]{dankmeier2006} Dadurch ist es bei den heute verwendten 100- bis 350-stelligen mit aktuellen Methoden und Rechenleistung nicht möglich aus $n$ die zugrundeliegenden Primzahlen $p$ und $q$ zu berechnen. %TODO möglichkeiten um große Primzahlen zu erstellen im nachfolgenden Kapitel, warum überhaupt Primzahlen?
         Zusätzlich zu $n$ muss auch noch die \emph{Eulersche Phi-Funktion} von $n$ gebildet werden.
         \subsubsection{Eulersche Phi-Funktion}
             Die Eulersche $\Phi$-Funktion $\Phi(n)$ bezeichnet die Menge der zu $n$ \emph{teilerfremden} Zahlen $a$ von $1$ bis $n-1$.\footcite[Vgl.][111]{swoboda2008kryptographie}
@@ -150,15 +150,31 @@
             \begin{equation}
                 \Phi(n) = (p-1)\cdot(q-1)
             \end{equation}
-        \subsubsection{Das modulare Inverse}
-            \enquote{Des weiteren [wird] eine zu $\Phi(n)$ teilerfremde Zufallszahl $e$ [gewählt] und [...] hierzu die \emph{modulare inverse} Zahl $d$ bezüglich $\Phi(n)$ [berechnet]. Für $d$ gilt:}\footcite[279]{beutelspacher2015}
+        \subsubsection{Das modulare Inverse} %TODO #6 noch ausführlicher (wat40 & dank44)
+            \enquote{Des weiteren [wird] eine zu $\Phi(n)$ teilerfremde Zufallszahl $e$ [$1<e<\Phi(n)$]\footcite[71]{watjen2008} [gewählt] und [...] hierzu die \emph{modulare inverse} Zahl $d$ bezüglich $\Phi(n)$ [berechnet]. Für $d$ gilt:}\footcite[279]{beutelspacher2015}
             \begin{equation}
                 d\cdot e\mod{\Phi(n)} = 1
             \end{equation}
-            \enquote{$d$ kann berechnet werden mit dem erweiterten Euklidischen Algorithmus}\footcite[77]{ertel2003}
+            Da $e$ und $\Phi(n)$ teilerfremd sind, gibt es hierfür eine eindeutige Lösung\footcite[Vgl.][77, 164]{ertel2003}. Dieses
+            \enquote{$d$ kann berechnet werden mit dem \emph{erweiterten Euklidischen Algorithmus}.}\footcite[77]{ertel2003}
 
         \paragraph{Der erweiterte Euklidische Algorithmus}
-            Lorem ipsum
+            Lorem ipsum %muss noch was rein, rekursion und so weiter
+        % was bringt das überhaupt
+        \subsubsection{Die Schlüssel}
+
+    \subsection{Ver-Entschlüsselung}
+    %TODO Beispiel
+
+    \subsection{Signatur}
+
+    \subsection{Beweis}
+
+    \subsection{praktische Anwendungen}
+
+    \subsection{Vor-  Nachteile}
+
+    \section{Schluss/Ausblick}
 
     \newpage
     \printbibliography
