--- a/inc/style.tex
+++ b/inc/style.tex
@@ -8,6 +8,7 @@
 \usepackage[hmargin={2.5cm,2.5cm}]{geometry} % Seitenränder wie im Merkblatt vorgeschrieben auf 2,5cm setzen
 % \usepackage{microtype}
 \usepackage{amsmath}
+\usepackage{amssymb}
 
 \usepackage{tabularx}
 \newcolumntype{C}{>{\bfseries\centering\arraybackslash}X}
