--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 
-    \pagenumbering{gobble}
+    \pagenumbering{gobble} %CHECK wo sollen Seitenzahlen losgehen
     \includepdf[pages=-]{./content/Deckblatt_Seminararbeit_2020.pdf}
     \maketitle
     \newpage
@@ -203,8 +203,23 @@
 
     %TODO Beispiel
     %TODO Algorithmus in Terminologie einbinden
+    %FIXME beutelspacher Zitate Seiten überprüfen
 
-    \subsection{Signatur}
+    \subsection{Digitale Signatur}
+        Neben dem Verschlüsseln von Nachrichten wird das RSA-Verfahren auch häufig dazu verwendet um digitale Nachrichten zu signieren. Bei einer \emph{digitalen Signatur}, oft auch \emph{elektronische Unterschrift} \enquote{unterschreibt} ein Teilnehmer $A$ seine Nachricht oder Datei indem er eine nur ihm bekannten \emph{Signaturfunktion} $s_A$ auf diese anwendet (Vgl. \cite[40-43]{beutelspacher2015}). Neben der geheimen Signaturfunktion besitzt jeder Teilnehmer auch noch eine \emph{Verifikationsfunktion} $v_A$, welche er öffentlich zugänglich macht oder zusätzlich mit einer signierten und einer unsignierten Version der Nachricht mitversendet. Mit dieser kann der Empfänger die signierte Nachricht entschlüsseln und falls sich der dechiffrierte Text mit dem unsignierten deckt, ist die Identität des Absenders bewiesen.
+        \begin{align}
+            SIG &= s_A(M) \\
+            v_A(SIG) &= M
+        \end{align}
+        Bei der Verwendung des RSA-Verfahrens wird als \emph{Signaturfunktion} die Funktion verwendet, welche bei der Verschlüsselung die Dechiffrierfunktion \ref{eq:decrytion} darstellt:
+        \begin{equation}
+            SIG = s_A(M) = M^{d}\mod{n}
+        \end{equation}
+        Und als \emph{Verifikationsfunktion} die Chiffrierfunktion \ref{eq:encryption}
+        \begin{equation}
+            M = v_A(SIG) = SIG^{e}\mod{n}
+        \end{equation}
+        Da es aber unpraktikabel ist immer gesamte Dateien zu signieren, da es zu lange dauert und in zu großen Signaturdateien resultiert, wird in der realen Anwendung meist eine \emph{Hashfunktion} verwendet, welche einen kleinen \enquote{Fingerabdruck} der Datei erstellt und nur dieser wird signiert. Beim Verifizieren wird ebenfalls nur das Ergebnis der auf die Datei angewendeten Hashfunktion mit der Signatur durch die Verifikationsfunktion verglichen.
 
     \subsection{Beweis}
 
