--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -184,10 +184,10 @@
             % TODO Programm richtig zitieren
             \begin{figure}
                 \includegraphics[width=\linewidth]{content/cryptool_encrypt_e1.png}
-                \caption{Veranschaulichung des Verschlüsselungprozesses}
+                \caption{Veranschaulichung des Verschlüsselungprozesses\protect\footnotemark}
                 \label{fig:encrypt}
             \end{figure}
-            % TODO Abbildungsverzeichnis
+            \footnotetext{erstellt vom Verfasser}
 
             Um Bobs Nachricht lesen zu können, muss sie den Chiffretext mit der Dechiffrierfunktion \ref{eq:decrytion} entschlüsseln und wieder zurück in Buchstaben konvertieren.\footcite[77]{ertel2003}
             \begin{equation}
@@ -195,9 +195,10 @@
             \end{equation}
             \begin{figure}
                 \includegraphics[width=\linewidth]{content/cryptool_decrypt_e1.png}
-                \caption{Veranschaulichung des Entschlüsselungprozesses}
+                \caption{Veranschaulichung des Entschlüsselungprozesses\protect\footnotemark}
                 \label{fig:decrypt}
             \end{figure}
+            \footnotetext{erstellt vom Verfasser}
             %TODO noch was dazu schreiben?
             %TODO Bilder noch besser anordnen?
 
